fix form error message overflow

--- a/src/main/assets-common/css/hakuperusteet.less
+++ b/src/main/assets-common/css/hakuperusteet.less
@@ -112,7 +112,7 @@ p {
 
 .userDataFormRow {
   margin-left: 10%;
-  height: 50px;
+  min-height: 50px;
   p {
     margin-left: @formLeftColumnWidth;
   }
